--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dictionary">
         <activity
-            android:name=".Language"
+            android:name=".TitleActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LanguageActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
