Pulling language files from Firebase via Firestore and Cloud Storage were implemented and tested

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
+    // Declare the dependency for the Cloud Firestore library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    // Declare the dependency for the Cloud Storage library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+
 }
